/* 
CreateURL will take in a long url, generate a 6 character code to associate with the URL
and store it in a redis datastore for XX amount of time. (length of time undetermined) and 
return a shortened URL code m

GetURL will take in a code and return/redirect users to the long URL, if still active.
*/

syntax = "proto3";

option go_package = "protos";

service Shortener {
    rpc CreateURL(URL) returns (Code);
    rpc GetURL(Code) returns (URL);
    rpc GetStats(Code) returns (Stats);
}

message URL {
    string LongUrl = 1;
    int64 TTL = 2;
    string Stats = 3;
}

message Code {
    string Code = 1;
}

message Stats {
    string Stats = 1;
}